# minikube-jenkins

./: .gitignore  .pymarkdown-linting-cfg.json  README.md  package.json  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
docs/: Makefile  mkdocs.yml
docs/docs/: index.md
docs/docs/assets/javascripts/: embed.js
docs/docs/django/: about.md  postgres.yml
docs/docs/jenkins-deployment/: configure-minikube.md  ingress-nginx.md
docs/docs/jenkins-deployment/charts/ingress-nginx/: values.yml
docs/docs/jenkins-deployment/scripts/: 0-deploy-nginx.sh  1-nginx-status.sh  2-iptables-passthrough.sh  config.sh
docs/docs/minikube/: about.md  install.md  kubectl-commands.md  minikube-profile.json  networking.md
docs/docs/stylesheets/: extra.css
docs/scripts/: markdown-lint.sh
