[tool.poetry]
name = "minikube-workbench"
version = "0.0.1"
description = ""
authors = ["Chris Mendoza <ccmendoza89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
boto3 = ">=1.26.89"
mkdocs = ">=1.5"
mkdocs-material = ">=9.0.11"
mkdocs-git-revision-date-localized-plugin = ">=1.1.0"
pymarkdownlnt = ">=0.9.8"
invoke = ">=2.0.0"
mkdocs-macros-plugin = ">=0.7.0"
mkdocs-awesome-pages-plugin = ">=2.8.0"
mkdocs-video = ">=1.5"
markdown-grid-tables = ">=0.3.1"
django = ">=5.0.4"
gunicorn = ">=22.0.0"
psycopg2 = ">=2.9.9"
Pillow = ">=10.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
